<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Locavore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_address">email address</string>
    <string name="username">username</string>
    <string name="logout">logout</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <string name="signup_as_farmer">Signup as Farmer</string>
    <string name="signup_as_locavore">Signup as Locavore</string>
    <string name="name">Name</string>
    <string name="radius">radius</string>
    <string name="farm_name">Farm Name</string>
    <string name="brief_farm_bio">brief farm bio</string>
    <string name="address">address</string>
    <string name="corn">🌽</string>
    <string name="map">🗺️</string>
    <string name="smile">😁</string>
    <string name="tractor">🚜</string>
    <string name="map_screen">map</string>
    <string name="order_screen">order</string>
    <string name="feed_screen">feed</string>
    <string name="profile">profile</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyA5e-GR4Jy4zIEU92ulMkSR8C4ukmIwc2k</string>
    <string name="radius_string">%2.2f mi</string>
    <string name="search">Search</string>
    <string name="follow">follow</string>
    <string name="farm_profile_image" tools:ignore="ExtraTranslation">Farm Profile Image</string>
    <string name="refresh">Refresh</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="following">following</string>
    <string name="view_profile">view profile</string>
    <string name="locavore">LOCAVORE</string>
    <string name="tell_us_more_about_the_farm">Tell us more about the farm…</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="username_field_empty">Please enter a username</string>
    <string name="password_field_empty">Please enter a password</string>
    <string name="user_already_exists">This user already exists; Please try a new username</string>
    <string name="misc_signup_error">An issue with signup has occurred</string>
    <string name="success">Success</string>
    <string name="invalid_user">Invalid username or password</string>
    <string name="misc_login_error">An issue with signup has occurred</string>
    <string name="short_password">Password must be > 10 characters long</string>
    <string name="misc_logout_error">An issue with logout has occurred</string>
    <string name="logout_success">Successful logout</string>
    <string name="location_permission">Please enable location permissions in your device settings order to use the app.</string>
    <string name="distance_calc">%.2f mi</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="monday">M</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">Su</string>
    <string name="tuesday">T</string>
    <string name="reviews">Reviews</string>
    <string name="events">Events</string>
    <string name="about_us">About Us</string>
    <string name="contact_information">Contact Information</string>
    <string name="upload">Upload</string>
    <string name="upload_permissions">Please enable photo upload permissions in your device settings.</string>
    <string name="x">X</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_cap">Address</string>
    <string name="background_photo">Background Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="bio">Bio</string>
    <string name="tags">Tags</string>
    <string name="empty_name">Please enter a name</string>
    <string name="empty_email">Please enter an email address</string>
    <string name="empty_bio">Please enter a short bio for the farm</string>
    <string name="empty_address">Please enter an address for the farm</string>
    <string name="invalid_radius">Please enter a number in miles between 5 and 25.</string>
    <string name="my_events">My Events</string>
</resources>