<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/produce_stock"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/allerta_stencil"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/locavore"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="65sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:autofillHints="username"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:drawableTint="@color/dark_yellow"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:autofillHints="password"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawableTint="@color/dark_yellow"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:layout_marginStart="50dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_a_user_yet"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnFarmerSignup"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:layout_marginStart="50dp"
            android:text="@string/signup_as_farmer" />

        <Button
            android:id="@+id/btnLocavoreSignup"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:layout_marginStart="50dp"
            android:text="@string/signup_as_locavore" />

    </LinearLayout>

</RelativeLayout>